tests/ui/fmt/ifmt-unimpl.stderr
error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:21
   |
LL |     format!("{:X}", "3");
   |              ----   ^^^ the trait `UpperHex` is not implemented for `str`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the following other types implement trait `UpperHex`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and 20 others
   = note: required for `&str` to implement `UpperHex`
note: required by a bound in `core::fmt::rt::Argument::<'a>::new_upper_hex`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
